--- a/R/RTs_blur_pilot_02072022.Rmd
+++ b/R/RTs_blur_pilot_02072022.Rmd
@@ -488,6 +488,88 @@ fig1a <- ggplot(dprime,aes(x=blur,y=dprime,fill=blur))+
 
 fig1a
 ```
+```{r prep, message=FALSE}
+## packages
+library(tidyverse)
+library(colorspace)
+library(ragg)
+library(cowplot)
+library(ggtext)
+library(pdftools)
+theme_set(theme_minimal(base_size = 15, base_family = "Neutraface Slab Display TT Bold"))
+theme_update(
+  panel.grid.major = element_line(color = "grey92", size = .4),
+  panel.grid.minor = element_blank(),
+  axis.title.x = element_text(color = "grey30", margin = margin(t = 7)),
+  axis.title.y = element_text(color = "grey30", margin = margin(r = 7)),
+  axis.text = element_text(color = "grey50"),
+  axis.ticks =  element_line(color = "grey92", size = .4),
+  axis.ticks.length = unit(.6, "lines"),
+  legend.position = "top",
+  plot.title = element_text(hjust = 0, color = "black", 
+                            family = "Neutraface 2 Display Titling",
+                            size = 21, margin = margin(t = 10, b = 35)),
+  plot.subtitle = element_text(hjust = 0, face = "bold", color = "grey30",
+                               family = "Neutraface Text Book Italic", 
+                               size = 14, margin = margin(0, 0, 25, 0)),
+  plot.title.position = "plot",
+  plot.caption = element_text(color = "grey50", size = 10, hjust = 1,
+                              family = "Neutraface Display Medium", 
+                              lineheight = 1.05, margin = margin(30, 0, 0, 0)),
+  plot.caption.position = "plot", 
+  plot.margin = margin(rep(20, 4))
+)
+pal <- c("#FF8C00", "#A034F0", "#159090")
+```
+
+```{r}
+top_mean <-dprime %>%  #get means for plot
+   dplyr::group_by(blur)%>%
+   dplyr::summarise(mean1=mean(dprime))
+
+
+p_mean <-dprime %>%  #get means for plot
+    dplyr::group_by(participant, blur)%>%
+     dplyr::summarise(mean1=mean(dprime))
+      
+bold <- element_text(face = "bold", color = "black", size = 14) #axis bold
+                                                
+p3 <- ggplot(p_mean, aes(x =blur, y = mean1, fill = blur)) + 
+    coord_cartesian(ylim = c(0,4.5)) + 
+  
+  ggdist::stat_halfeye(
+    aes(
+      y = mean1,
+      color = blur,
+      fill = after_scale(lighten(color, .5))
+    ),
+    shape = 18,
+    point_size = 3,
+    interval_size = 1.8,
+    adjust = .5,
+    .width = c(0, 1)
+  ) +
+    geom_point(aes(x = blur, y = mean1, colour = blur),position = position_jitter(width = .10), size = 1, shape = 20)+
+    geom_boxplot(aes(x = blur, y = mean1, fill = blur),outlier.shape = NA, alpha = .5, width = .1, colour = "black")+
+  labs(
+    subtitle = "Final Test Performance: 24-48 Hrs",
+    caption = 'Delayed and RP conditions do not differ from one another. Both are better than RS.'
+  )+
+     scale_colour_brewer(palette = "Dark2")+
+  scale_fill_brewer(palette = "Dark2") + 
+    stat_summary(fun="mean", geom="point", colour="darkred", size=3)+
+    labs(y = "D prime", x = "Blur Condition") + theme_bw(base_size = 16)+
+    geom_label_repel(data=top_mean, aes(y=mean1, label=round(mean1, 2)), color="black", min.segment.length = 0, seed = 42, box.padding = 0.5) + 
+    theme(axis.text=bold) + theme(legend.position = "none") 
+  #  ggsave('place.png', width = 8, height = 6)
+
+p3
+
+
+```
+
+
+
 ```{r}
 hrate<-sdt %>% select(participant, hr, blur)
 
