--- a/R/RTs_blur_pilot_02072022.Rmd
+++ b/R/RTs_blur_pilot_02072022.Rmd
@@ -240,6 +240,58 @@ p1 <- ggplot(v, aes(x = q, y = MRT*1000, colour = fct_relevel(blur, level=c("HB"
 ```
 
 ```{r}
+#diff
+v_chb <- v %>%
+  dplyr::filter(blur=="C" | blur=="HB") %>%
+  dplyr::group_by(q)%>%
+  tidyr::pivot_wider(names_from = "blur", values_from = "MRT") %>%
+  mutate(diff=C*1000-HB*1000)
+
+
+v_chb
+
+p2 <- ggplot(v_chb, aes(x = q, y = diff)) + 
+  geom_abline(intercept = 0, slope = 0) +
+  geom_line(size = 1, colour = "black") +
+  geom_point(size = 3, colour = "black") +
+  theme_bw() + 
+  theme(legend.position = "none") + 
+  theme(axis.title = element_text(size = 16, face = "bold"), 
+        axis.text = element_text(size = 16),
+        plot.title = element_text(face = "bold", size = 20)) +
+scale_y_continuous(breaks=seq(-380,-140,50)) +
+    coord_cartesian(ylim = c(-380, -140)) +
+  scale_x_continuous(breaks=seq(.1,.9, .2))+
+  labs( title = "Clear - High Blur", x = "Quantiles", y = "Group differences")
+
+
+v_clb <- v %>%
+  dplyr::filter(blur=="C" | blur=="LB") %>%
+  dplyr::group_by(q)%>%
+  tidyr::pivot_wider(names_from = "blur", values_from = "MRT") %>%
+  mutate(diff=C*1000-LB*1000)
+
+p3 <- ggplot(v_clb, aes(x = q, y = diff)) + 
+  geom_abline(intercept = 0, slope = 0) +
+  geom_line(size = 1, colour = "black") +
+  geom_point(size = 3, colour = "black") +
+  theme_bw() + 
+  theme(legend.position = "none") + 
+  theme(axis.title = element_text(size = 16, face = "bold"), 
+        axis.text = element_text(size = 16),
+        plot.title = element_text(face = "bold", size = 20)) +
+scale_y_continuous(breaks=seq(-25,-10,2)) +
+    coord_cartesian(ylim = c(-25, -10)) +
+  scale_x_continuous(breaks=seq(.1,.9, .2))+
+  labs( title = "Clear - Low Blur", x = "Quantiles", y = "Group differences")
+
+
+
+```
+
+
+
+```{r}
 p4 <- ggplot(p_mean, aes(x = blur , y = mean1, fill = blur)) +
     coord_cartesian(ylim = c(.5,1)) + 
   
